RESOLVED FIXED77816
WKPreferences instances cannot be copied
https://bugs.webkit.org/show_bug.cgi?id=77816
Summary WKPreferences instances cannot be copied
mitz
Reported 2012-02-04 15:53:21 PST
WKPreferences instances cannot be copied
Attachments
Add WKPreferencesCreateCopy() (5.52 KB, patch)
2012-02-04 16:11 PST, mitz
sam: review+
mitz
Comment 1 2012-02-04 15:59:40 PST
mitz
Comment 2 2012-02-04 16:11:58 PST
Created attachment 125504 [details] Add WKPreferencesCreateCopy()
mitz
Comment 3 2012-02-04 16:18:46 PST
Ryosuke Niwa
Comment 4 2012-02-06 11:31:55 PST
In GCC, I'm getting the following compilation error: cc1plus: warnings being treated as errors /Volumes/Data/webkit4/Source/WebKit2/UIProcess/WebPreferences.cpp: In copy constructor 'WebKit::WebPreferences::WebPreferences(const WebKit::WebPreferences&)': /Volumes/Data/webkit4/Source/WebKit2/UIProcess/WebPreferences.cpp:44: warning: base class 'class WebKit::APIObject' should be explicitly initialized in the copy constructor PhaseScriptExecution "Check For Framework Include Consistency" /Volumes/Data/webkit4/WebKitBuild/WebKit2.build/Debug/WebKit2.build/Script-5DF408C6131DD49700130071.sh cd /Volumes/Data/webkit4/Source/WebKit2
Ryosuke Niwa
Comment 5 2012-02-06 11:37:35 PST
Ryosuke Niwa
Comment 6 2012-02-06 11:40:28 PST
I'm not happy about using the default constructor of APIObject but I couldn't figure out a good way to fix it properly without being invasive here. Maybe andersca, bdash, or darin would know?
Darin Adler
Comment 7 2012-02-06 15:57:03 PST
I think your fix was correct.
Ryosuke Niwa
Comment 8 2012-02-06 20:48:30 PST
(In reply to comment #7) > I think your fix was correct. That is good to hear.
Note You need to log in before you can comment on or make changes to this bug.