<rdar://problem/10772406> WKPreferences instances cannot be copied https://bugs.webkit.org/show_bug.cgi?id=77816

Reviewed by Sam Weinig.

Source/WebKit2:

Test added in TestWebKitAPI/Tests/WebKit2/WKPreferences.cpp.

* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesCreateCopy): Added.
* UIProcess/API/C/WKPreferencesPrivate.h:
* UIProcess/WebPreferences.cpp:
(WebKit::WebPreferences::WebPreferences): Added this constructor that copies the
WebPreferencesStore of the given WebPreferences.
* UIProcess/WebPreferences.h:
(WebKit::WebPreferences::create): Added this create function that takes a WebPreferences
instance and creates a new instance with a copy of the given instance’s store.

Tools:

* TestWebKitAPI/Tests/WebKit2/WKPreferences.cpp:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/94684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106749 268f45cc-cd09-0410-ab3c-d52691b4dbfc